--- a/redirecttest/requirements.txt
+++ b/redirecttest/requirements.txt
@@ -1,9 +1,2 @@
-Django==1.8.9
-django-nose==1.4.3
-ipdb==0.8.1
-ipdbplugin==1.4.2
-ipython==4.1.1
-mock==1.3.0
-nose==1.3.7
-readline==6.2.4.1
-wsgiref==0.1.2
+Django>=1.11.19
+django-nose>=1.4.3
